[gd_scene load_steps=5 format=3 uid="uid://c4um2sg1dyj6c"]

[ext_resource type="Script" uid="uid://d2wxnoe48t23a" path="res://addons/redscribe/src/editor/editor.gd" id="1_mg613"]
[ext_resource type="Resource" uid="uid://bgane4ws868g8" path="res://addons/redscribe/data/editor_syntaxes/ruby_syntax.tres" id="2_s6nb6"]
[ext_resource type="Resource" uid="uid://ckp73hvmxuqqi" path="res://addons/redscribe/data/editor_themes/gessetti_theme.tres" id="3_73q2q"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_s6nb6"]
number_color = Color(1, 1, 1, 1)
symbol_color = Color(0.984314, 0.984314, 0.827451, 1)
function_color = Color(0.972549, 0.662745, 0.835294, 1)
member_variable_color = Color(1, 1, 1, 1)
keyword_colors = {
"alias": Color(0.466667, 0.941176, 1, 1),
"alias_method": Color(0.466667, 0.941176, 1, 1),
"attr": Color(0.466667, 0.941176, 1, 1),
"attr_accessor": Color(0.466667, 0.941176, 1, 1),
"attr_reader": Color(0.466667, 0.941176, 1, 1),
"attr_writer": Color(0.466667, 0.941176, 1, 1),
"begin": Color(0.956863, 0.690196, 0.262745, 1),
"break": Color(0.956863, 0.690196, 0.262745, 1),
"case": Color(0.956863, 0.690196, 0.262745, 1),
"catch": Color(0.956863, 0.690196, 0.262745, 1),
"class": Color(0.956863, 0.690196, 0.262745, 1),
"def": Color(0.956863, 0.690196, 0.262745, 1),
"do": Color(0.956863, 0.690196, 0.262745, 1),
"else": Color(0.956863, 0.690196, 0.262745, 1),
"elsif": Color(0.956863, 0.690196, 0.262745, 1),
"end": Color(0.956863, 0.690196, 0.262745, 1),
"extend": Color(0.956863, 0.690196, 0.262745, 1),
"false": Color(0.596078, 0.882353, 1, 1),
"for": Color(0.956863, 0.690196, 0.262745, 1),
"if": Color(0.956863, 0.690196, 0.262745, 1),
"include": Color(0.956863, 0.690196, 0.262745, 1),
"initialize": Color(0.956863, 0.690196, 0.262745, 1),
"module": Color(0.956863, 0.690196, 0.262745, 1),
"new": Color(0.956863, 0.690196, 0.262745, 1),
"next": Color(0.956863, 0.690196, 0.262745, 1),
"nil": Color(0.596078, 0.882353, 1, 1),
"prepend": Color(0.956863, 0.690196, 0.262745, 1),
"private": Color(0.466667, 0.941176, 1, 1),
"protected": Color(0.466667, 0.941176, 1, 1),
"public": Color(0.466667, 0.941176, 1, 1),
"raise": Color(0.956863, 0.690196, 0.262745, 1),
"redo": Color(0.956863, 0.690196, 0.262745, 1),
"require": Color(0.956863, 0.690196, 0.262745, 1),
"rescue": Color(0.956863, 0.690196, 0.262745, 1),
"retry": Color(0.956863, 0.690196, 0.262745, 1),
"return": Color(0.956863, 0.690196, 0.262745, 1),
"self": Color(0.466667, 0.941176, 1, 1),
"super": Color(0.466667, 0.941176, 1, 1),
"throw": Color(0.956863, 0.690196, 0.262745, 1),
"true": Color(0.596078, 0.882353, 1, 1),
"unless": Color(0.956863, 0.690196, 0.262745, 1),
"until": Color(0.956863, 0.690196, 0.262745, 1),
"using": Color(0.956863, 0.690196, 0.262745, 1),
"when": Color(0.956863, 0.690196, 0.262745, 1),
"while": Color(0.956863, 0.690196, 0.262745, 1),
"yield": Color(0.466667, 0.941176, 1, 1)
}
color_regions = {
"\" \"": Color(0.27451, 0.941176, 0.0352941, 1),
"#": Color(0.364706, 0.662745, 0.92549, 1),
"' '": Color(0.27451, 0.941176, 0.0352941, 1),
":  ": Color(0.862745, 0.968627, 0.0627451, 1),
"@  ": Color(0.466667, 0.941176, 1, 1)
}

[node name="ReDScribeEditor" type="CodeEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.0235294, 0.12549, 0.215686, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/caret_color = Color(1, 1, 1, 1)
scroll_past_end_of_file = true
syntax_highlighter = SubResource("CodeHighlighter_s6nb6")
line_folding = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
indent_size = 2
indent_use_spaces = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_mg613")
current_syntax = ExtResource("2_s6nb6")
current_theme = ExtResource("3_73q2q")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="text_changed" from="." to="." method="_on_text_changed"]
